// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Heading /> size 100 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #696f8c;
font-family: "Inter", sans-serif;
font-size: 8.96px;
font-weight: 500;
letter-spacing: 0.6px;
line-height: 16px;
margin-bottom: 0px;
margin-top: 0px;
text-transform: uppercase;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_696f8c ub-fnt-fam_1yirpkw ub-f-wght_500 ub-fnt-sze_8-96px ub-txt-trns_uppercase ub-ln-ht_16px ub-ltr-spc_0-6px ub-box-szg_border-box"
>
  Heading 100
</h2>
`;

exports[`<Heading /> size 200 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #696f8c;
font-family: "Inter", sans-serif;
font-size: 11.2px;
font-weight: 500;
letter-spacing: 0;
line-height: 16px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_696f8c ub-fnt-fam_1yirpkw ub-f-wght_500 ub-fnt-sze_11-2px ub-ln-ht_16px ub-ltr-spc_0 ub-box-szg_border-box"
>
  Heading 200
</h2>
`;

exports[`<Heading /> size 300 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "Inter", sans-serif;
font-size: 11.2px;
font-weight: 500;
letter-spacing: 0;
line-height: 16px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_1yirpkw ub-f-wght_500 ub-fnt-sze_11-2px ub-ln-ht_16px ub-ltr-spc_0 ub-box-szg_border-box"
>
  Heading 300
</h2>
`;

exports[`<Heading /> size 400 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "Inter", sans-serif;
font-size: 14px;
font-weight: 500;
letter-spacing: -0.05px;
line-height: 19px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_1yirpkw ub-f-wght_500 ub-fnt-sze_14px ub-ln-ht_19px ub-ltr-spc_-0-05px ub-box-szg_border-box"
>
  Heading 400
</h2>
`;

exports[`<Heading /> size 500 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "Inter", sans-serif;
font-size: 17.5px;
font-weight: 600;
letter-spacing: -0.05px;
line-height: 23px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_1yirpkw ub-f-wght_600 ub-fnt-sze_17-5px ub-ltr-spc_-0-05px ub-ln-ht_23px ub-box-szg_border-box"
>
  Heading 500
</h2>
`;

exports[`<Heading /> size 600 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "Inter", sans-serif;
font-size: 21.88px;
font-weight: 600;
letter-spacing: -0.07px;
line-height: 28px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_1yirpkw ub-f-wght_600 ub-fnt-sze_21-88px ub-ln-ht_28px ub-ltr-spc_-0-07px ub-box-szg_border-box"
>
  Heading 600
</h2>
`;

exports[`<Heading /> size 700 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "Inter", sans-serif;
font-size: 27.34px;
font-weight: 600;
letter-spacing: -0.07px;
line-height: 28px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_1yirpkw ub-f-wght_600 ub-fnt-sze_27-34px ub-ln-ht_28px ub-ltr-spc_-0-07px ub-box-szg_border-box"
>
  Heading 700
</h2>
`;

exports[`<Heading /> size 800 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "Inter", sans-serif;
font-size: 34.18px;
font-weight: 600;
letter-spacing: -0.2px;
line-height: 41px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_1yirpkw ub-f-wght_600 ub-fnt-sze_34-18px ub-ln-ht_41px ub-ltr-spc_-0-2px ub-box-szg_border-box"
>
  Heading 800
</h2>
`;

exports[`<Heading /> size 900 renders as expected 1`] = `
Extracted Styles:
box-sizing: border-box;
color: #101840;
font-family: "Inter", sans-serif;
font-size: 42.72px;
font-weight: 600;
letter-spacing: -0.2px;
line-height: 49px;
margin-bottom: 0px;
margin-top: 0px;


<h2
  className="ub-mt_0px ub-mb_0px ub-color_101840 ub-fnt-fam_1yirpkw ub-f-wght_600 ub-fnt-sze_42-72px ub-ln-ht_49px ub-ltr-spc_-0-2px ub-box-szg_border-box"
>
  Heading 900
</h2>
`;
